--- a/about.html
+++ b/about.html
@@ -1,116 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us | MindMetrics</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: linear-gradient(to right, #89f7fe, #66a6ff);
-      color: #222;
-    }
-    header {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    header h1 {
-      color: #fff;
-      margin: 0;
-    }
-    nav a {
-      color: #fff;
-      margin: 0 12px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #ffd700;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>About Us - Mental Health Awareness</title>
 
-    .about-section {
-      max-width: 900px;
-      margin: 50px auto;
-      background: rgba(255,255,255,0.9);
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    }
-    .about-section h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #333;
-    }
-    .about-section p {
-      font-size: 1.05rem;
-      line-height: 1.6;
-      margin-bottom: 20px;
-    }
+<style>
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Segoe UI", Arial, sans-serif;
+    background: #f5f6ff;
+    color: #333;
+    text-align: center;
+}
 
-    footer {
-      background: rgba(0,0,0,0.7);
-      padding: 30px 20px;
-      margin-top: 40px;
-      text-align: center;
-      color: #eee;
-    }
-    footer a {
-      color: #ffd700;
-      text-decoration: none;
-      margin: 0 8px;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
+/* HEADER */
+header {
+    background: #4c5bf5;
+    color: white;
+    padding: 15px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo img { height: 60px; }
+nav a { color: white; text-decoration: none; margin-left: 20px; font-size: 20px; font-weight: 500; }
+nav a:hover { text-decoration: underline; }
+
+/* HERO / PAGE TITLE */
+.hero {
+    padding: 50px 20px;
+    background: #e6e6ff;
+}
+.hero h1 { font-size: 38px; color: #202020; margin-bottom: 10px; }
+.hero p { font-size: 18px; color: #444; max-width: 700px; margin: auto; line-height: 1.6; }
+
+/* ABOUT CONTENT */
+.about-container {
+    margin: 50px auto;
+    width: 90%;
+    max-width: 900px;
+    background: #d6e0ff;
+    padding: 40px 30px;
+    border-radius: 18px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+    text-align: left;
+}
+
+.about-container h3 {
+    font-size: 28px;
+    color: #2a2a72;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.about-container p {
+    font-size: 17px;
+    color: #444;
+    line-height: 1.7;
+    margin-bottom: 15px;
+}
+
+/* FOOTER */
+footer {
+    text-align: center;
+    background: #2f36a6;
+    color: white;
+    padding: 20px 0;
+    margin-top: 60px;
+    font-size: 15px;
+}
+</style>
 </head>
 <body>
-  <header>
-    <h1>MindMetrics</h1>
+
+<!-- HEADER -->
+<header>
+    <div class="logo">
+        <img src="C:\Users\loq\OneDrive\Desktop\logo.png" alt="Website Logo">
+    </div>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="depression.html">Depression Test</a>
-      <a href="anxiety.html">Anxiety Test</a>
-      <a href="bipolar.html">Bipolar Test</a>
-      <a href="ptsd.html">PTSD Test</a>
-      <a href="adhd.html">ADHD Test</a>
-      <a href="eating.html">Eating Disorder Test</a>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
     </nav>
-  </header>
+</header>
 
-  <div class="about-section">
+<!-- HERO -->
+<section class="hero">
     <h1>About Us</h1>
-    <p>
-      Welcome to <strong>MindMetrics</strong> — a safe and supportive space where you can explore 
-      your mental well-being through self-assessments. We provide scientifically recognized screening tools 
-      for conditions such as <em>Depression, Anxiety, Bipolar Disorder, PTSD, ADHD, and Eating Disorders</em>.
-    </p>
-    <p>
-      Our mission is to make mental health resources more accessible. These tests are 
-      <strong>not a diagnosis</strong>, but they can help you reflect on your emotional state and 
-      guide you toward seeking professional support when needed.
-    </p>
-    <p>
-      Remember: reaching out for help is a sign of strength, not weakness. 
-      If you ever feel overwhelmed, we encourage you to connect with a licensed mental health professional 
-      or call your local support helpline immediately.
-    </p>
-    <p style="text-align:center; font-weight:bold; color:#444;">
-       You are not alone —<i>your mental health matters.</i> 
-    </p>
-  </div>
+    <p>Learn about our mission and the importance of mental health awareness.</p>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Mental Health Awareness </p>
-    <p>
-      <a href="index.html">Home</a> |
-      <a href="about.html">About</a> |
-      <a href="mailto:support@mentalhealth.org">Contact</a>
-    </p>
-  </footer>
+<!-- ABOUT CONTENT -->
+<div class="about-container">
+    <h3>Our Mission</h3>
+    <p>Our website aims to provide accurate and accessible information about common mental health disorders. We want to increase awareness, reduce stigma, and empower individuals to recognize signs and seek help when needed.</p>
+
+    <h3>Why Mental Health Awareness Matters</h3>
+    <p>Mental health affects how we think, feel, and behave every day. Understanding mental health conditions helps people identify symptoms early, provide support to loved ones, and encourage timely professional help.</p>
+
+    <h3>Our Approach</h3>
+    <p>We provide clear information about six common mental health conditions: Depression, Anxiety, Bipolar Disorder, ADHD, PTSD, and Eating Disorders. Each disorder has its own section with concise general info, symptoms, and links to self-assessment tests.</p>
+
+    <h3>Who We Are</h3>
+    <p>We are a group of mental health enthusiasts and educators dedicated to making mental health information simple, approachable, and supportive. This website is intended for educational purposes and awareness.</p>
+
+    <h3>Contact Us</h3>
+    <p>If you have questions, suggestions, or need further guidance, please visit our <a href="contact.html">Contact Page</a> to get in touch. We are here to help.</p>
+</div>
+
+<!-- FOOTER -->
+<footer>
+    © 2025 Mental Health Awareness Website · Educational Purpose Only
+</footer>
+
 </body>
 </html>
