--- a/bipolar.html
+++ b/bipolar.html
@@ -6,7 +6,7 @@
 <title>Bipolar Test (MDQ)</title>
 <style>
     body { font-family: Arial, sans-serif; background: #f4f4f9; padding: 20px; }
-    .container { max-width: 700px; margin: auto; background: rgb(199, 246, 247); padding: 20px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+    .container { max-width: 700px; margin: auto; background: #d6e0ff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
     h1 { text-align: center; }
     .question { margin: 15px 0; }
     label { display: block; margin: 5px 0; }
