--- a/contact.html
+++ b/contact.html
@@ -137,9 +137,9 @@ footer {
     </form>
 
     <div class="contact-info">
-        <p><strong>Email:</strong> info@mentalhealth.com</p>
-        <p><strong>Phone:</strong> +91 12345 67890</p>
-        <p><strong>Follow us on Social Media:</strong> @MentalHealthAwareness</p>
+        <p><strong>Email:</strong> MindMetrics@gmail.com</p>
+        <p><strong>Phone:</strong> +91 7986104208</p>
+        <p><strong>Follow us on Social Media:</strong> @_MindMetrics</p>
     </div>
 </div>
 
